# llama-cpp-python

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-wheels-cpu-linux.yml  build-wheels-cpu-win.yml  build-wheels-cu121-linux-basic.yml  build-wheels-cu121-linux.yml  build-wheels-cu121-win-basic.yml  build-wheels-cu121-win.yml  build-wheels-cu124-cu126-win.yml  build-wheels-cu124-linux.yml  build-wheels-cu124-win.yml  build-wheels-cu126-linux.yml  build-wheels-cu126-win.yml  build-wheels-cu128-linux.yml  build-wheels-cu128-win.yml  build-wheels-cu130-linux.yml  build-wheels-cu130-win.yml  build-wheels-cu131-linux.yml  build-wheels-cu131-win.yml  build-wheels-cuda-win.yml  build-wheels-metal.yaml  test.yaml
docker/: README.md
docker/cuda_simple/: Dockerfile
docs/wiki/: SCHEMA.md  index.md  install.md
docs/wiki/core/: Llama.md  LlamaEmbedding.md
docs/wiki/development/: git-commit-generation-agent.md
docs/wiki/modules/: LlamaCache.md  LlamaEmbedding.md  LlamaSpeculative.md  Logger.md
examples/benchmark/: benchmark_speculative.py
examples/low_level_api/: common.py  low_level_api_chat_cpp.py  low_level_api_llama_cpp.py
llama_cpp/: __init__.py  _ctypes_extensions.py  _ggml.py  _internals.py  _logger.py  llama.py  llama_cache.py  llama_chat_format.py  llama_cpp.py  llama_embedding.py  llama_grammar.py  llama_multimodal.py  llama_speculative.py  llama_types.py  mtmd.py  mtmd_cpp.py
llama_cpp/server/: model.py  settings.py
tests/: test_llama.py
